[package]
name = "unitools-app"
version = "0.1.0"
edition = "2024"
authors = ["WangWindow"]
description = "一个多功能工具箱应用"

[dependencies]
# 核心依赖
tokio = { version = "1.44", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# 界面相关
egui = "0.31"
eframe = "0.31"
image = "0.25"

# 工具模块依赖
chrono = "0.4"
regex = "1.8"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
unitools-core = { path = "./crates/unitools-core" }
unitools-utils = { path = "./crates/unitools-utils" }

[features]
default = ["file_tools", "text_tools", "network_tools"]
file_tools = []
text_tools = []
network_tools = []
