[package]
name = "unitools-utils"
version = "0.1.0"
edition = "2024"
authors = ["WangWindow"]
description = "工具箱应用的实用工具库"

[dependencies]
unitools-core = { path = "../unitools-core" }
anyhow = "1.0.97"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
regex = "1.11.1"
tokio = { version = "1.44.2", features = ["fs", "io-util"], optional = true }
image = { version = "0.25.6", optional = true }
base64 = { version = "0.22.1", optional = true }

[features]
default = []
async = ["tokio"]
image_utils = ["image", "base64"]
